Change blog list menu item name

--- a/alloy_blog.links.menu.yml
+++ b/alloy_blog.links.menu.yml
@@ -1,7 +1,7 @@
 
 # Blog menu items definition
 entity.blog.collection:
-  title: 'Blog list'
+  title: 'Blogs'
   route_name: entity.blog.collection
   description: 'List Blog entities'
   parent: system.admin_structure
