--- a/config/install/field.field.node.blog_post.field_related_posts.yml
+++ b/config/install/field.field.node.blog_post.field_related_posts.yml
@@ -2,28 +2,27 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_topics
+    - field.storage.node.field_related_posts
     - node.type.blog_post
-    - taxonomy.vocabulary.tags
-_core:
-  default_config_hash: ZHQ-KlouLE1FCXIje6CD42xusHsupnvoB3yqM9hWyhM
-id: node.blog_post.field_topics
-field_name: field_topics
+  module:
+    - entity_reference_revisions
+id: node.blog_post.field_related_posts
+field_name: field_related_posts
 entity_type: node
 bundle: blog_post
-label: Topics
+label: 'Related Posts'
 description: ''
 required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
-  handler: 'default:taxonomy_term'
+  handler: 'default:node'
   handler_settings:
     target_bundles:
-      tags: tags
+      blog_post: blog_post
     sort:
       field: _none
     auto_create: false
     auto_create_bundle: ''
-field_type: entity_reference
+field_type: entity_reference_revisions
