--- a/config/install/core.entity_view_display.node.blog_post.default.yml
+++ b/config/install/core.entity_view_display.node.blog_post.default.yml
@@ -6,16 +6,18 @@ dependencies:
     - field.field.node.blog_post.field_blog
     - field.field.node.blog_post.field_blog_post_image
     - field.field.node.blog_post.field_categories
+    - field.field.node.blog_post.field_related_posts
     - field.field.node.blog_post.field_topics
     - image.style.large
     - node.type.blog_post
   module:
+    - entity_reference_revisions
     - fences
     - image
     - text
     - user
 _core:
-  default_config_hash: c13Db7XL8aSSXtlIJABHpRRf3iAZ_luU5csIo6wIWfg
+  default_config_hash: XYY9eNAz29CNJmGM5JY-0uKKtNxKQ6GXBThKhjwVXVY
 id: node.blog_post.default
 targetEntityType: node
 bundle: blog_post
@@ -59,6 +61,15 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: content
+  field_related_posts:
+    weight: 5
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    type: entity_reference_revisions_entity_view
     region: content
   field_tags:
     weight: 4
