--- a/config/optional/core.entity_form_display.user.user.default.yml
+++ b/config/optional/core.entity_form_display.user.user.default.yml
@@ -6,11 +6,10 @@ dependencies:
     - field.field.user.user.field_first_name
     - field.field.user.user.field_job_title
     - field.field.user.user.field_last_name
+    - field.field.user.user.user_picture
   module:
     - text
     - user
-_core:
-  default_config_hash: x8cW3wNP8tfOyaHShdJ2vze_UKjIlP7NWfzzRhaZw-w
 id: user.user.default
 targetEntityType: user
 bundle: user
@@ -22,7 +21,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_bio:
-    weight: 4
+    weight: 5
     settings:
       rows: 9
       summary_rows: 3
@@ -56,3 +55,4 @@ hidden:
   field_job_title: true
   language: true
   path: true
+  user_picture: true
