--- a/config/optional/core.entity_form_display.blog.blog.default.yml
+++ b/config/optional/core.entity_form_display.blog.blog.default.yml
@@ -2,120 +2,53 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.blog_post.body
-    - field.field.node.blog_post.field_blog
-    - field.field.node.blog_post.field_blog_post_image
-    - field.field.node.blog_post.field_bottom_ctas
-    - field.field.node.blog_post.field_categories
-    - field.field.node.blog_post.field_related_posts
-    - field.field.node.blog_post.field_topics
-    - image.style.thumbnail
-    - node.type.blog_post
+    - field.field.blog.blog.field_url_slug
   module:
-    - entity_reference_revisions
-    - image
-    - inline_entity_form
+    - alloy_blog
     - path
     - text
-id: node.blog_post.default
-targetEntityType: node
-bundle: blog_post
+id: blog.blog.default
+targetEntityType: blog
+bundle: blog
 mode: default
 content:
-  body:
-    type: text_textarea_with_summary
-    weight: 5
-    region: content
-    settings:
-      rows: 9
-      summary_rows: 3
-      placeholder: ''
-    third_party_settings: {  }
-  created:
-    type: datetime_timestamp
-    weight: 8
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  field_blog:
-    type: options_select
+  description:
+    type: text_textfield
     weight: 0
     region: content
-    settings: {  }
-    third_party_settings: {  }
-  field_blog_post_image:
-    type: image_image
-    weight: 4
-    region: content
     settings:
-      progress_indicator: throbber
-      preview_image_style: thumbnail
-    third_party_settings: {  }
-  field_bottom_ctas:
-    type: inline_entity_form_complex
-    weight: 7
-    region: content
-    settings:
-      form_mode: default
-      label_singular: ''
-      label_plural: ''
-      allow_new: true
-      allow_existing: true
-      match_operator: CONTAINS
-      override_labels: false
-      collapsible: false
-      collapsed: false
-    third_party_settings: {  }
-  field_categories:
-    type: entity_reference_autocomplete
-    weight: 2
-    region: content
-    settings:
-      match_operator: CONTAINS
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  field_related_posts:
-    type: entity_reference_revisions_autocomplete
-    weight: 6
-    region: content
+  field_url_slug:
+    weight: 31
     settings:
-      match_operator: CONTAINS
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  field_topics:
-    type: entity_reference_autocomplete_tags
-    weight: 3
+    type: string_textfield
     region: content
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
   path:
     type: path
-    weight: 10
+    weight: 30
     region: content
     settings: {  }
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: 1
+    weight: -4
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  uid:
+  user_id:
     type: entity_reference_autocomplete
-    weight: 9
+    weight: 5
     settings:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
     region: content
     third_party_settings: {  }
-hidden:
-  promote: true
-  sticky: true
+hidden: {  }
