--- a/config/optional/core.entity_view_display.node.blog_post.teaser.yml
+++ b/config/optional/core.entity_view_display.node.blog_post.teaser.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.blog_post.body
     - field.field.node.blog_post.field_blog
     - field.field.node.blog_post.field_blog_post_image
+    - field.field.node.blog_post.field_bottom_ctas
     - field.field.node.blog_post.field_categories
     - field.field.node.blog_post.field_related_posts
     - field.field.node.blog_post.field_topics
@@ -16,6 +17,8 @@ dependencies:
     - image
     - text
     - user
+_core:
+  default_config_hash: 0it_X11CM1GUAbLiN63GAF0hrhQzCNGq5h_39uulxwE
 id: node.blog_post.teaser
 targetEntityType: node
 bundle: blog_post
@@ -68,6 +71,7 @@ content:
     third_party_settings: {  }
 hidden:
   field_blog: true
+  field_bottom_ctas: true
   field_related_posts: true
   field_tags: true
   field_topics: true
