--- a/config/optional/core.entity_form_display.blog.blog.default.yml
+++ b/config/optional/core.entity_form_display.blog.blog.default.yml
@@ -5,7 +5,6 @@ dependencies:
     - field.field.blog.blog.field_url_slug
   module:
     - alloy_blog
-    - path
     - text
 id: blog.blog.default
 targetEntityType: blog
@@ -13,30 +12,24 @@ bundle: blog
 mode: default
 content:
   description:
-    type: text_textfield
-    weight: 0
+    type: text_textarea
+    weight: 1
     region: content
     settings:
-      size: 60
       placeholder: ''
+      rows: 5
     third_party_settings: {  }
   field_url_slug:
-    weight: 31
+    weight: 2
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
     region: content
-  path:
-    type: path
-    weight: 30
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -4
+    weight: 0
     region: content
     settings:
       size: 60
@@ -44,11 +37,12 @@ content:
     third_party_settings: {  }
   user_id:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 3
     settings:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
     region: content
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  path: true
