--- a/config/optional/pathauto.pattern.blog_post.yml
+++ b/config/optional/pathauto.pattern.blog_post.yml
@@ -3,21 +3,19 @@ status: true
 dependencies:
   module:
     - node
-_core:
-  default_config_hash: M8QZepNwUvPX1M5rVXsaUXDR6wpx9GVZ4LRwqwhJm5k
 id: blog_post
 label: 'Blog Post'
 type: 'canonical_entities:node'
-pattern: '/[node:field_blog:entity:url]/[node:title]'
+pattern: '/[node:field_blog:entity:field_url_slug]/[node:title]'
 selection_criteria:
-  54d133ac-8f73-45b1-9a37-f5cb190c83a7:
+  467a4d50-6bd1-41fe-a969-97a0304a90d5:
     id: node_type
     bundles:
       blog_post: blog_post
     negate: false
     context_mapping:
       node: node
-    uuid: 54d133ac-8f73-45b1-9a37-f5cb190c83a7
+    uuid: 467a4d50-6bd1-41fe-a969-97a0304a90d5
 selection_logic: and
 weight: -5
 relationships: {  }
