--- a/config/optional/field.field.blog.blog.field_url_slug.yml
+++ b/config/optional/field.field.blog.blog.field_url_slug.yml
@@ -11,7 +11,7 @@ entity_type: blog
 bundle: blog
 label: 'URL Slug'
 description: ''
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
