Add image styles, form display and entity view settings

--- a/config/optional/core.entity_view_display.node.blog_post.default.yml
+++ b/config/optional/core.entity_view_display.node.blog_post.default.yml
@@ -8,9 +8,13 @@ dependencies:
     - field.field.node.blog_post.field_bottom_ctas
     - field.field.node.blog_post.field_categories
     - field.field.node.blog_post.field_related_posts
+    - field.field.node.blog_post.field_sidebar_ctas
     - field.field.node.blog_post.field_topics
     - node.type.blog_post
   module:
+    - entity_reference_revisions
+    - fences
+    - image
     - text
     - user
 id: node.blog_post.default
@@ -20,20 +24,80 @@ mode: default
 content:
   body:
     type: text_default
-    weight: 0
+    weight: 1
     region: content
     label: hidden
     settings: {  }
     third_party_settings: {  }
+  field_blog_post_image:
+    type: image
+    weight: 0
+    region: content
+    label: hidden
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings:
+      fences:
+        fences_field_tag: none
+        fences_field_classes: ''
+        fences_field_item_tag: none
+        fences_field_item_classes: ''
+        fences_label_tag: none
+        fences_label_classes: ''
+  field_bottom_ctas:
+    type: entity_reference_revisions_entity_view
+    weight: 5
+    region: content
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+  field_categories:
+    type: entity_reference_label
+    weight: 2
+    region: content
+    label: above
+    settings:
+      link: true
+    third_party_settings:
+      fences:
+        fences_field_tag: div
+        fences_field_classes: ''
+        fences_field_item_tag: ul
+        fences_field_item_classes: ''
+        fences_label_tag: h3
+        fences_label_classes: ''
+  field_sidebar_ctas:
+    type: entity_reference_revisions_entity_view
+    weight: 6
+    region: content
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+  field_topics:
+    type: entity_reference_label
+    weight: 3
+    region: content
+    label: above
+    settings:
+      link: true
+    third_party_settings:
+      fences:
+        fences_field_tag: div
+        fences_field_classes: ''
+        fences_field_item_tag: ul
+        fences_field_item_classes: ''
+        fences_label_tag: h3
+        fences_label_classes: ''
   links:
-    weight: 1
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
   field_blog: true
-  field_blog_post_image: true
-  field_bottom_ctas: true
-  field_categories: true
   field_related_posts: true
-  field_topics: true
