--- a/config/optional/core.entity_form_display.node.blog_post.default.yml
+++ b/config/optional/core.entity_form_display.node.blog_post.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.blog_post.field_bottom_ctas
     - field.field.node.blog_post.field_categories
     - field.field.node.blog_post.field_related_posts
+    - field.field.node.blog_post.field_sidebar_ctas
     - field.field.node.blog_post.field_topics
     - image.style.thumbnail
     - node.type.blog_post
@@ -33,7 +34,7 @@ content:
     third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 8
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -67,17 +68,23 @@ content:
       collapsed: false
     third_party_settings: {  }
   field_categories:
-    type: entity_reference_autocomplete
+    type: options_buttons
     weight: 2
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  field_related_posts:
+    type: entity_reference_revisions_autocomplete
+    weight: 6
     region: content
     settings:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  field_related_posts:
+  field_sidebar_ctas:
     type: entity_reference_revisions_autocomplete
-    weight: 6
+    weight: 8
     region: content
     settings:
       match_operator: CONTAINS
@@ -95,7 +102,7 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 10
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -109,7 +116,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 9
+    weight: 10
     settings:
       match_operator: CONTAINS
       size: 60
