--- a/config/optional/core.entity_form_display.node.blog_post.default.yml
+++ b/config/optional/core.entity_form_display.node.blog_post.default.yml
@@ -60,11 +60,11 @@ content:
       form_mode: default
       label_singular: ''
       label_plural: ''
+      collapsible: true
       allow_new: true
       allow_existing: true
       match_operator: CONTAINS
       override_labels: false
-      collapsible: false
       collapsed: false
     third_party_settings: {  }
   field_categories:
@@ -83,13 +83,19 @@ content:
       placeholder: ''
     third_party_settings: {  }
   field_sidebar_ctas:
-    type: entity_reference_revisions_autocomplete
+    type: inline_entity_form_complex
     weight: 8
     region: content
     settings:
+      form_mode: default
+      label_singular: ''
+      label_plural: ''
+      collapsible: true
+      allow_new: true
+      allow_existing: true
       match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      override_labels: false
+      collapsed: false
     third_party_settings: {  }
   field_topics:
     type: entity_reference_autocomplete_tags
