--- a/config/optional/core.entity_view_display.node.blog_post.default.yml
+++ b/config/optional/core.entity_view_display.node.blog_post.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.node.blog_post.field_related_posts
     - field.field.node.blog_post.field_sidebar_ctas
     - field.field.node.blog_post.field_topics
+    - image.style.blog_page
     - node.type.blog_post
   module:
     - entity_reference_revisions
@@ -35,7 +36,7 @@ content:
     region: content
     label: hidden
     settings:
-      image_style: ''
+      image_style: blog_page
       image_link: ''
     third_party_settings:
       fences:
