install/config process change to support author bios

--- a/config/optional/core.entity_form_mode.user.register.yml
+++ b/config/optional/core.entity_form_mode.user.register.yml
@@ -1,9 +1,9 @@
 langcode: en
-status: false
+status: true
 dependencies:
   module:
     - user
-id: user.full
-label: 'User account'
+id: user.register
+label: Register
 targetEntityType: user
 cache: true
