--- a/config/optional/core.entity_form_display.user.user.default.yml
+++ b/config/optional/core.entity_form_display.user.user.default.yml
@@ -3,11 +3,19 @@ status: true
 dependencies:
   config:
     - field.field.user.user.field_bio
+    - field.field.user.user.field_facebook
+    - field.field.user.user.field_familiar_name
     - field.field.user.user.field_first_name
     - field.field.user.user.field_job_title
     - field.field.user.user.field_last_name
+    - field.field.user.user.field_linkedin
+    - field.field.user.user.field_twitter_handle
     - field.field.user.user.user_picture
+    - image.style.thumbnail
   module:
+    - image
+    - link
+    - path
     - text
     - user
 id: user.user.default
@@ -20,39 +28,98 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  contact:
+    weight: 2
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_bio:
-    weight: 5
+    type: text_textarea_with_summary
+    weight: 13
+    region: content
     settings:
       rows: 9
       summary_rows: 3
       placeholder: ''
     third_party_settings: {  }
-    type: text_textarea_with_summary
+  field_facebook:
+    type: link_default
+    weight: 9
     region: content
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
+  field_familiar_name:
+    type: string_textfield
+    weight: 7
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   field_first_name:
-    weight: 2
+    type: string_textfield
+    weight: 5
+    region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  field_job_title:
     type: string_textfield
+    weight: 8
     region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   field_last_name:
-    weight: 3
+    type: string_textfield
+    weight: 6
+    region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-    type: string_textfield
+  field_linkedin:
+    type: link_default
+    weight: 11
     region: content
-  timezone:
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
+  field_twitter_handle:
+    type: string_textfield
+    weight: 10
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  language:
     weight: 1
     region: content
     settings: {  }
     third_party_settings: {  }
-hidden:
-  contact: true
-  field_job_title: true
-  language: true
-  path: true
-  user_picture: true
+  path:
+    type: path
+    weight: 4
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  timezone:
+    weight: 3
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  user_picture:
+    type: image_image
+    weight: 12
+    region: content
+    settings:
+      progress_indicator: throbber
+      preview_image_style: thumbnail
+    third_party_settings: {  }
+hidden: {  }
