--- a/config/install/core.entity_view_display.blog.blog.default.yml
+++ b/config/install/core.entity_view_display.blog.blog.default.yml
@@ -2,6 +2,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.blog.blog.field_disqus_shortname
     - field.field.blog.blog.field_url_slug
   module:
     - alloy_blog
@@ -35,6 +36,7 @@ content:
       link_to_entity: false
     third_party_settings: {  }
 hidden:
+  field_disqus_shortname: true
   field_url_slug: true
   url_alias: true
   user_id: true
