--- a/config/install/core.entity_view_display.node.blog_post.default.yml
+++ b/config/install/core.entity_view_display.node.blog_post.default.yml
@@ -48,7 +48,7 @@ content:
         fences_label_classes: ''
   field_bottom_ctas:
     type: entity_reference_revisions_entity_view
-    weight: 5
+    weight: 4
     region: content
     label: hidden
     settings:
@@ -59,7 +59,7 @@ content:
     type: entity_reference_label
     weight: 2
     region: content
-    label: above
+    label: hidden
     settings:
       link: true
     third_party_settings:
@@ -67,6 +67,22 @@ content:
         fences_field_tag: div
         fences_field_classes: ''
         fences_field_item_tag: ul
+        fences_field_item_classes: ''
+        fences_label_tag: h3
+        fences_label_classes: ''
+  field_related_posts:
+    type: entity_reference_revisions_entity_view
+    weight: 5
+    region: content
+    label: above
+    settings:
+      view_mode: text_teaser
+      link: ''
+    third_party_settings:
+      fences:
+        fences_field_tag: none
+        fences_field_classes: ''
+        fences_field_item_tag: none
         fences_field_item_classes: ''
         fences_label_tag: h3
         fences_label_classes: ''
@@ -94,11 +110,6 @@ content:
         fences_field_item_classes: ''
         fences_label_tag: h3
         fences_label_classes: ''
-  links:
-    weight: 4
-    region: content
-    settings: {  }
-    third_party_settings: {  }
 hidden:
   field_blog: true
-  field_related_posts: true
+  links: true
