--- a/config/install/views.view.blog_feed.yml
+++ b/config/install/views.view.blog_feed.yml
@@ -68,7 +68,14 @@ display:
             previous: ‹‹
             next: ››
       style:
-        type: default
+        type: html_list
+        options:
+          row_class: ''
+          default_row_class: true
+          uses_fields: false
+          type: ul
+          wrapper_class: ''
+          class: 'list-unstyled blog-teasers-list'
       row:
         type: 'entity:node'
         options:
@@ -312,7 +319,7 @@ display:
     display_plugin: embed
     id: embed_1
     display_title: Embed
-    position: 2
+    position: 1
     display_options:
       display_extenders: {  }
       pager:
@@ -334,17 +341,39 @@ display:
   page_1:
     display_plugin: page
     id: page_1
-    display_title: Page
-    position: 2
+    display_title: 'Page (with filters)'
+    position: 3
     display_options:
       display_extenders: {  }
       path: blog/%/%/%
+      display_description: ''
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url
+        - url.query_args
+        - 'user.node_grants:view'
+        - user.permissions
+      tags: {  }
+  page_2:
+    display_plugin: page
+    id: page_2
+    display_title: Page
+    position: 2
+    display_options:
+      display_extenders: {  }
+      path: blog
+      display_description: ''
+      arguments: {  }
+      defaults:
+        arguments: false
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
         - url.query_args
         - 'user.node_grants:view'
         - user.permissions
