--- a/config/install/field.field.assembly.recent_blog_posts.field_filter_by_author.yml
+++ b/config/install/field.field.assembly.recent_blog_posts.field_filter_by_author.yml
@@ -2,16 +2,16 @@ langcode: en
 status: true
 dependencies:
   config:
-    - assembly.assembly_type.blog_feed
+    - assembly.assembly_type.recent_blog_posts
     - field.storage.assembly.field_filter_by_author
-id: assembly.blog_feed.field_filter_by_author
+id: assembly.recent_blog_posts.field_filter_by_author
 field_name: field_filter_by_author
 entity_type: assembly
-bundle: blog_feed
+bundle: recent_blog_posts
 label: 'Filter by Author'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
