--- a/config/install/field.field.assembly.recent_blog_posts.field_filter_by_category.yml
+++ b/config/install/field.field.assembly.recent_blog_posts.field_filter_by_category.yml
@@ -2,17 +2,17 @@ langcode: en
 status: true
 dependencies:
   config:
-    - assembly.assembly_type.blog_feed
+    - assembly.assembly_type.recent_blog_posts
     - field.storage.assembly.field_filter_by_category
     - taxonomy.vocabulary.categories
-id: assembly.blog_feed.field_filter_by_category
+id: assembly.recent_blog_posts.field_filter_by_category
 field_name: field_filter_by_category
 entity_type: assembly
-bundle: blog_feed
+bundle: recent_blog_posts
 label: 'Filter by Category'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
@@ -23,5 +23,5 @@ settings:
     sort:
       field: _none
     auto_create: false
-    auto_create_bundle: categories
+    auto_create_bundle: ''
 field_type: entity_reference
